# TC_LED_Table

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini  secrets.ini.example
data/config/: config.global.json  config.json  config.local.json
lib/: README
scripts/: config.csv  parse_config_csv.py
src/api/: CMakeLists.txt  LedTableAPi.h  LedTableApi.cpp  LedTableApi.h
src/bindings/: CMakeLists.txt  README.md  config_bindings.cpp  coordinate_bindings.cpp  led_table_api_bindings.cpp  sensor_bindings.cpp  setup.py  tc_led_table_module.cpp
src/config/: CMakeLists.txt  led_table_config.cpp  led_table_config.h  make_artnet_config.cpp  make_artnet_config.h  make_cluster_config.cpp  make_cluster_config.h  make_mqtt_config.cpp  make_mqtt_config.h  worker_settings.h
src/core/: CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterCommands.h  ClusterConfig.h  ClusterManager.cpp  ClusterManager.h  ClusterMessage.cpp  ClusterMessage.cpp.old  ClusterMessage.h  ClusterMessageManager.cpp  ClusterMessageManager.h  LedTableTypes.h  Node.cpp  Node.h  NodeConfig.cpp  SensorListener.cpp  SensorListener.h  SensorMessage.cpp  SensorMessage.h  SensorTransmitter.cpp  SensorTransmitter.h  node_geometry.cpp  node_geometry.h
src/core/coordinates/: Cartesian2dCoordinate.h  CubeCoordinate.cpp  CubeCoordinate.h
src/core/proto/: ClusterMessagesProto.options  ClusterMessagesProto.pb.c  ClusterMessagesProto.pb.h  ClusterMessagesProto.proto  SensorDataProto.pb.c  SensorDataProto.pb.h  SensorDataProto.proto
src/core/sensors/: TouchSensor.cpp  TouchSensor.h
src/embedded/: config.cpp.ignore  config.h  main.cpp
src/embedded/controller/: Controller.cpp  Controller.h  bootstrap.cpp  bootstrap.h
src/embedded/pico_touch_cluster/: README.md
src/embedded/pico_touch_cluster/src/: main.cpp
src/embedded/worker/: Worker.cpp  Worker.h  bootstrap.cpp  bootstrap.h  sensorpoll.cpp
src/embedded/worker_deprecated/: Worker.cpp  Worker.h  bootstrap.cpp
src/native/: Cluster.cpp  Cluster.h  ClusterCommands.h  ClusterConfig.cpp  ClusterManager.cpp  ClusterManager.h  ClusterMessage.cpp  ClusterMessageManager.cpp  Coordinates.cpp  Coordinates.h  Node.cpp  Node.h  NodeConfig.cpp  NodeConfig.h  api_test.cpp  main.cpp  sensor_test.cpp
src/native/coordinates/: Cartesian2dCoordinate.cpp  Coordinate.h  RingCoordinate.cpp  RingCoordinate.h
src/native/proto/: ClusterMessagesProto.pb.c  ClusterMessagesProto.pb.h  ClusterMessagesProto.proto
src/windows/: AsciiUtils.cpp  AsciiUtils.h  CMakeLists.txt
test/core/: test_utils.cpp  test_utils.h
test/core/test_basic/: basic_api_tests.cpp  basic_cluster_manager_tests.cpp  basic_cluster_tests.cpp  basic_cluster_tests.h  basic_message_tests.cpp  basic_message_tests.h  basic_sensor_tests.cpp  basic_sensor_tests.h  main.cpp
test/embedded/test_worker/: basic.cpp
test/native/: make_cluster_config.cpp  make_cluster_config.h  test_utils.cpp  test_utils.h
test/native/test_basic/: basic_api_tests.cpp  basic_api_tests.h  basic_cluster_manager_tests.cpp  basic_cluster_manager_tests.h  basic_cluster_tests.cpp  basic_message_tests.cpp  basic_message_tests.h  main.cpp
